# SlimyCrypto

./: dev-interact.sh  parse_results.py  slime_dev.pem  slime_genes.py  user-interact.sh  user.pem
slimy-crypto/egld-slk/: Cargo.toml  deploy-testnet.interaction.json
slimy-crypto/egld-slk/meta/: Cargo.toml
slimy-crypto/egld-slk/meta/src/: main.rs
slimy-crypto/egld-slk/scenarios/: swap_egld.scen.json
slimy-crypto/egld-slk/src/: lib.rs
slimy-crypto/egld-slk/tests/: egld_slk_swap_scenario_rs_test.rs  scenario_go_test.rs
slimy-crypto/egld-slk/wasm/: Cargo.toml
slimy-crypto/egld-slk/wasm/src/: lib.rs
slimy-crypto/slime-genetic-alg/: Cargo.toml  deploy-testnet.interaction.json
slimy-crypto/slime-genetic-alg/meta/: Cargo.toml
slimy-crypto/slime-genetic-alg/meta/src/: main.rs
slimy-crypto/slime-genetic-alg/scenarios/: generate-slime-genes.scen.json  init.scen.json
slimy-crypto/slime-genetic-alg/src/: lib.rs
slimy-crypto/slime-genetic-alg/tests/: slime_genetic_alg_scenario_go_test.rs  slime_genetic_alg_scenario_rs_test.rs
slimy-crypto/slime-genetic-alg/wasm/: Cargo.toml
slimy-crypto/slime-genetic-alg/wasm/src/: lib.rs
slimy-crypto/slime-ownership/: Cargo.toml  deploy-testnet.interaction.json
slimy-crypto/slime-ownership/interact-rs/: Cargo.toml
slimy-crypto/slime-ownership/interact-rs/src/: interactor_main.rs
slimy-crypto/slime-ownership/meta/: Cargo.toml
slimy-crypto/slime-ownership/meta/src/: main.rs
slimy-crypto/slime-ownership/scenarios/: breed_ok.scen.json  catch_gen_zero.scen.json  init.scen.json  query.scen.json  setup_accounts.scen.json
slimy-crypto/slime-ownership/src/: lib.rs
slimy-crypto/slime-ownership/tests/: slime_ownership_scenario_go_test.rs  slime_ownership_scenario_rs_test.rs
slimy-crypto/slime-ownership/wasm/: Cargo.toml
slimy-crypto/slk-shop/: Cargo.toml
slimy-crypto/slk-shop/meta/: Cargo.toml
slimy-crypto/slk-shop/output/: slk-shop.abi.json  slk-shop.imports.json  slk-shop.mxsc.json  slk-shop.wasm
slimy-crypto/slk-shop/scenarios/: slk_shop.scen.json
slimy-crypto/slk-shop/src/: slk_shop.rs
slimy-crypto/slk-shop/tests/: slk_shop_scenario_go_test.rs  slk_shop_scenario_rs_test.rs
slimy-crypto/slk-shop/wasm/: Cargo.toml
(+18 files in other folders)
