[package]
name = "slk-shop"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/slk_shop.rs"

[dependencies.multiversx-sc]
version = "0.46.1"

[dependencies.multiversx-sc-modules]
version = "0.46.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.46.1"

[workspace]
members = [
    ".",
    "meta",
]
