[package]
name = "egld-slk-swap-meta"
version = "0.0.0"
authors = ["SlimyCrypto"]
edition = "2021"
publish = false

[dev-dependencies]

[dependencies.egld-slk-swap-sc]
path = ".."

[dependencies.multiversx-sc]
version = "0.46.1"

[dependencies.multiversx-sc-meta]
version = "0.46.1"
default-features = false
